	Change Log

	* 09/04/2017

	** Geometry building is reorganized to a list of geometry creation
	commads

        object created from givn coordinates
           Point/Circle/Rect/Line/Polygon
        object created from given entities
           Spline -> Points to Spline
           CreateLine -> Points to multiple Lines
           LineLoop -> Lines to LineLoop
           CreateSurface -> Lines to PlaneSurface
           SurfaceLoop -> Surfacess to SurfaceLoop
           CreateVolume ->  Surfacess to Volume
 	object manipulation
           Extrude/Revolve
        boolean operation
           Union/Intersection/Difference/Fragments

	** sample waveguide model is added which uses all Geometry/Mesh/Physics
	segments and solves the problem using serial/parallel solvers.

	** plotting panel is fixed to use a new indexed-vertex mode of solid
	   function. 
	
	* 08/01/2017

	** Geometry building interface is added for testing an idea...
	
	* 07/24/2017

	** Initial value setting for TH3Ds was added.
	
	* 07/22/2017

	** Arrow plot resampling
        - resampling the data to reduce the number of arrows to a
	practical (~300) level
	- a user can specifiy the number of arrow
	- keep face separated is eliminated since we want to make the
	arrow length consistent among surfaces.
	
	* 07/21/2017

	** multiple selection in piScope is enabled
	- a user can select domain and change the surface color at once.
	- this makes a production of final graphics easier using the following
	steps...
	1) use "select Volume"
	2) copy selected faces
	3) open a new window (change 3D axes mode, set gl shading..)
	4) paste the copied faces
	5) open property panel and change color.

	** Other piScope enhancement
	- OIT (order independent transparency) renderer is enabled.
	- Videoplayer button relocation.

	** Initial value from file and inital value from init panel is added
	- Initial value panel of EM3D module works now.
	- Reading initial values from file works only when the file structure